--- a/form/inicio.html
+++ b/form/inicio.html
@@ -1,49 +1,65 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Formulario Explorador</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
-</head>
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Formulario Explorador</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
-</head>
-<body style="width: 100%; height: 100vh; padding-bottom: 100px; background: white; box-shadow: 0px 2px 6px rgba(23, 15, 73, 0.16); border-radius: 50px; overflow: hidden; flex-direction: column; justify-content: center; align-items: center; gap: 100px; display: flex; position: relative; margin: 0;">
-        <div data-layer="wrapper" class="Wrapper" style="align-self: stretch; height: 93px; background: white; box-shadow: 0px 1px 7px rgba(0, 0, 0, 0.25); flex-direction: column; justify-content: center; align-items: center; gap: 10px; display: flex; position: fixed; top: 0; width: 100%; z-index: 1000;">
-          <div data-layer="header" class="Header" style="align-self: stretch; height: 93px;  padding-right: 86px; padding-top: 14px; padding-bottom: 14px; background: white; justify-content: space-between; align-items: center; display: inline-flex">
-            <div data-layer="logo" class="Logo" style="width: 259.50px; padding-left: 14px; padding-right: 14px; flex-direction: column; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
-              <div data-layer="datalpine" class="Datalpine" style="align-self: stretch; height: 42.12px; justify-content: center; align-items: center; display: inline-flex">
-                <img data-layer="logo_image" class="LogoImage" style="width: 44.50px; height: 42.12px" src="..\tools\logo.png"  />
-                <img data-layer="DatLogo" class="Datlogo" style="width: 187px; height: 42px" src="..\tools\DatLogo.png" />
-              </div>
-            </div>
-            <a href="https://datalpine.mx/exploradores/" data-layer="Primary BTN" class="PrimaryBtn" style="padding-top: 20px; padding-bottom: 21px; padding-left: 40px; padding-right: 40px; background: #7021EB; box-shadow: 0px 3px 12px rgba(74, 58, 255, 0.18); border-radius: 56px; justify-content: center; align-items: center; gap: 8px; display: flex; text-decoration: none;">
-              <div data-layer="Button Text" class="ButtonText" style="text-align: center; color: white; font-size: 18px; font-family: DM Sans; font-weight: 700; line-height: 20px; word-wrap: break-word">Exploradores</div>
-            </a>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="/assets/style.css" />
+    <script src="main.js"></script>
+  </head>
+
+  <body class="Inicio">
+    <div data-layer="wrapper" class="Wrapper">
+      <div data-layer="header" class="Header">
+        <div data-layer="logo" class="Logo">
+          <div data-layer="datalpine" class="Datalpine">
+            <img
+              data-layer="logo_image"
+              class="LogoImage"
+              src="..\tools\logo.png"
+            />
+            <img
+              data-layer="DatLogo"
+              class="Datlogo"
+              src="..\tools\DatLogo.png"
+            />
           </div>
         </div>
-        <div data-layer="hero" class="Hero" style="padding-top: 50px; padding-bottom: 50px; flex-direction: column; justify-content: center; align-items: center; gap: 19px; display: flex; position: relative; top: 93px; width: 100%; max-width: 1200px; margin: 0 auto; padding: 0 40px; box-sizing: border-box;">
-          <div data-layer="point_text" class="PointText" style="text-align: center; color: #7021EB; font-size: 16px; font-family: DM Sans; font-weight: 500; text-transform: uppercase; line-height: 18px; letter-spacing: 3.84px; word-wrap: break-word;">Herramienta avanzada</div>
-          <div data-layer="titulo_div" class="TituloDiv" style="padding: 25px; background: white; box-shadow: 0px 8px 25px rgba(13.04, 10.35, 43.56, 0.06); border-radius: 60px; border: 1px #EFF0F6 solid; justify-content: center; align-items: center; gap: 10px; display: flex; flex-direction: column;">
-            <div data-layer="titulo_text" class="TituloText" style="text-align: center; color: #170F49; font-size: 50px; font-family: DM Sans; font-weight: 700; line-height: 62px; word-wrap: break-word; padding: 0 20px;">  Explorador de propiedades  </div>
-          </div>
-          <div data-layer="inicio" class="Inicio" style="padding: 20px; flex-direction: column; justify-content: flex-start; align-items: center; gap: 30px; display: flex;">
-            <div data-layer="descripcion" class="Descripcion" style="text-align: center; color: #6F6C90; font-size: 18px; font-family: DM Sans; font-weight: 400; line-height: 30px; word-wrap: break-word;">Herramienta avanzada que evalúa la competitividad de propiedades, ofreciendo análisis de precios y recomendaciones para maximizar ingresos y reducir el tiempo de venta.</div>
-            <a href="contact.html" data-layer="iniciar" class="Iniciar" style="padding: 20px 40px; background: #7021EB; box-shadow: 0px 3px 12px rgba(74, 58, 255, 0.18); border-radius: 56px; font-size: 18px; font-family: DM Sans; font-weight: 700; color: white; line-height: 20px; cursor: pointer; transition: box-shadow 0.2s ease-in-out; border: none; text-decoration: none;">INICIAR EXPLORADOR</a>
-          </div>
-        </div>      
-    
-        <p>hola</p>
-
-</body>
+        <a
+          href="https://datalpine.mx/exploradores/"
+          data-layer="Primary BTN"
+          class="PrimaryBtn"
+        >
+          <div data-layer="Button Text" class="ButtonText">Exploradores</div>
+        </a>
+      </div>
+    </div>
+    <div data-layer="hero" class="Hero">
+      <div data-layer="point_text" class="PointText">Herramienta avanzada</div>
+      <div data-layer="titulo_div" class="TituloDiv">
+        <div data-layer="titulo_text" class="TituloText">
+          Explorador de propiedades
+        </div>
+      </div>
+      <div data-layer="inicio" class="Inicio">
+        <div data-layer="descripcion" class="Descripcion">
+          Herramienta avanzada que evalúa la competitividad de propiedades,
+          ofreciendo análisis de precios y recomendaciones para maximizar
+          ingresos y reducir el tiempo de venta.
+        </div>
+        <a href="contact.html" data-layer="iniciar" class="Iniciar"
+          >INICIAR EXPLORADOR</a
+        >
+      </div>
+    </div>
+  </body>
 </html>
