--- a/form/step5.html
+++ b/form/step5.html
@@ -1,82 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-</head>
-<body>
-    <div data-layer="confirmar" class="Confirmar" style="width: 1440px; height: 910.41px; padding-bottom: 50px; background: white; box-shadow: 0px 2px 6px rgba(23, 15, 73, 0.16); border-radius: 50px; overflow: hidden; flex-direction: column; justify-content: flex-start; align-items: center; gap: 50px; display: inline-flex">
-      <div data-layer="wrapper" class="Wrapper" style="align-self: stretch; height: 93px; background: white; box-shadow: 0px 1px 7px rgba(0, 0, 0, 0.25); flex-direction: column; justify-content: center; align-items: center; gap: 10px; display: flex; position: fixed; top: 0; width: 100%; z-index: 1000;">
-        <div data-layer="header" class="Header" style="align-self: stretch; height: 93px; padding-left: 86px; padding-right: 86px; padding-top: 14px; padding-bottom: 14px; background: white; justify-content: space-between; align-items: center; display: inline-flex">
-          <div data-layer="logo" class="Logo" style="width: 259.50px; padding-left: 14px; padding-right: 14px; flex-direction: column; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
-            <div data-layer="datalpine" class="Datalpine" style="align-self: stretch; height: 42.12px; justify-content: center; align-items: center; display: inline-flex">
-              <img data-layer="logo_image" class="LogoImage" style="width: 44.50px; height: 42.12px" src="..\tools\logo.png"  />
-              <img data-layer="DatLogo" class="Datlogo" style="width: 187px; height: 42px" src="..\tools\DatLogo.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="/assets/style.css" />
+
+    <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+
+  <body>
+    <div data-layer="confirmar" class="Step5">
+      <div data-layer="wrapper" class="Wrapper">
+        <div data-layer="header" class="Header">
+          <div data-layer="logo" class="Logo">
+            <div data-layer="datalpine" class="Datalpine">
+              <img
+                data-layer="logo_image"
+                class="LogoImage"
+                src="..\tools\logo.png"
+              />
+              <img
+                data-layer="DatLogo"
+                class="Datlogo"
+                src="..\tools\DatLogo.png"
+              />
             </div>
           </div>
-          <a href="https://datalpine.mx/exploradores/" data-layer="Primary BTN" class="PrimaryBtn" style="padding-top: 20px; padding-bottom: 21px; padding-left: 40px; padding-right: 40px; background: #7021EB; box-shadow: 0px 3px 12px rgba(74, 58, 255, 0.18); border-radius: 56px; justify-content: center; align-items: center; gap: 8px; display: flex; text-decoration: none;">
-            <div data-layer="Button Text" class="ButtonText" style="text-align: center; color: white; font-size: 18px; font-family: DM Sans; font-weight: 700; line-height: 20px; word-wrap: break-word">Exploradores</div>
+          <a
+            href="https://datalpine.mx/exploradores/"
+            data-layer="Primary BTN"
+            class="PrimaryBtn"
+          >
+            <div data-layer="Button Text" class="ButtonText">Exploradores</div>
           </a>
         </div>
       </div>
-      <div data-layer="form_step" class="FormStep" style="flex-direction: column; justify-content: center; align-items: center; gap: 23px; display: flex; position: relative; top: 93px; z-index: 0;">
-        <div data-layer="titulo" class="Titulo" style="align-self: stretch; text-align: center; color: #170F49; font-size: 34px; font-family: DM Sans; font-weight: 700; line-height: 46px; word-wrap: break-word">Confirmar solicitud</div>
-          <div data-layer="desc" class="Desc" style="width: 678px; text-align: center; color: #6F6C90; font-size: 18px; font-family: DM Sans; font-weight: 400; line-height: 30px; word-wrap: break-word">¿Está seguro de realizar el envío de su información?</div>
-          <div data-layer="step_form" class="StepForm" style="align-self: stretch; height: 492.41px; padding-top: 10px; padding-bottom: 21px; padding-left: 10px; padding-right: 10px; background: white; box-shadow: 0px 6px 54px rgba(20.11, 19.66, 42.50, 0.07); border-radius: 34px; overflow: hidden; border: 1px #EFF0F6 solid; flex-direction: column; justify-content: flex-start; align-items: center; gap: 21px; display: flex">
-            <div data-layer="progreso" class="Progreso" style="width: 678px; height: 54px; padding: 10px; flex-direction: column; justify-content: center; align-items: center; gap: 10px; display: flex">
-              <div data-layer="steps" class="Steps" style="width: 538.27px; position: relative">
-                <div data-layer="step1_bar" class="Step1Bar" style="width: 98.09px; height: 6px; left: 52px; top: 13.50px; position: absolute; background: #7021EB; border-radius: 40px"></div>
-                <div data-layer="step2_bar" class="Step2Bar" style="width: 98.09px; height: 6px; left: 220.09px; top: 13.50px; position: absolute; background: #7021EB; border-radius: 40px"></div>
-                <div data-layer="step3_bar" class="Step3Bar" style="width: 98.09px; height: 6px; left: 388.18px; top: 13.50px; position: absolute; background: #7021EB; border-radius: 40px"></div>
-                <div data-layer="step1_progreso" class="Step1Progreso" style="width: 34px; height: 34px; left: 0px; top: 0px; position: absolute">
-                  <div data-layer="Ellipse 435" class="Ellipse435" style="width: 34px; height: 34px; left: 0px; top: 0px; position: absolute; background: #7021EB; border-radius: 9999px"></div>
-                  <div data-layer="1" style="left: 14px; top: 8px; position: absolute; color: white; font-size: 16px; font-family: DM Sans; font-weight: 500; line-height: 18px; word-wrap: break-word">1</div>
+      <div data-layer="form_step" class="FormStep1">
+        <div data-layer="titulo" class="Titulo">Confirmar solicitud</div>
+        <div data-layer="desc" class="DescText">
+          ¿Está seguro de realizar el envío de su información?
+        </div>
+        <div data-layer="step_form" class="StepForm FinForm">
+          <div data-layer="progreso" class="ProgresoConfirm FinProgreso">
+            <div data-layer=" steps" class="Steps">
+              <div data-layer="step1_bar" class="Step1BarC"></div>
+              <div data-layer="step2_bar" class="Step2BarC"></div>
+              <div data-layer="step3_bar" class="Step3BarC"></div>
+              <div data-layer="step1_progreso" class="Step1Progreso">
+                <div
+                  data-layer="Ellipse 435"
+                  class="Ellipse435 Ellipse435Morado"
+                ></div>
+                <div data-layer="1" class="numberOne numberOneMorado">
+                  <p>1</p>
                 </div>
-                <div data-layer="step2_progreso" class="Step2Progreso" style="width: 34px; height: 34px; left: 168.09px; top: 0px; position: absolute">
-                  <div data-layer="Ellipse 436" class="Ellipse436" style="width: 34px; height: 34px; left: 0px; top: 0px; position: absolute; background: #7021EB; border-radius: 9999px"></div>
-                  <div data-layer="2" style="left: 13px; top: 8px; position: absolute; color: white; font-size: 16px; font-family: DM Sans; font-weight: 500; line-height: 18px; word-wrap: break-word">2</div>
+              </div>
+              <div data-layer="step2_progreso" class="Step2Progreso">
+                <div
+                  data-layer="Ellipse 436"
+                  class="Ellipse438 Ellipse436Morado"
+                ></div>
+                <div data-layer="2" class="TwoC numberTwoMorado">
+                  <p>2</p>
                 </div>
-                <div data-layer="step3_progreso" class="Step3Progreso" style="width: 34px; height: 34px; left: 336.18px; top: 0px; position: absolute">
-                  <div data-layer="Ellipse 437" class="Ellipse437" style="width: 34px; height: 34px; left: 0px; top: 0px; position: absolute; background: #7021EB; border-radius: 9999px"></div>
-                  <div data-layer="3" style="left: 12px; top: 8px; position: absolute; color: white; font-size: 16px; font-family: DM Sans; font-weight: 500; line-height: 18px; word-wrap: break-word">3</div>
+              </div>
+              <div data-layer="step3_progreso" class="Step3Progreso">
+                <div
+                  data-layer="Ellipse 437"
+                  class="Ellipse439 Ellipse439Morado"
+                ></div>
+                <div data-layer="3" class="TreeC numberTreeMorado">
+                  <p>3</p>
                 </div>
-                <div data-layer="step4_progreso" class="Step4Progreso" style="width: 34px; height: 34px; left: 504.27px; top: 0px; position: absolute">
-                  <div data-layer="Ellipse 437" class="Ellipse437" style="width: 34px; height: 34px; left: 0px; top: 0px; position: absolute; background: #7021EB; border-radius: 9999px"></div>
-                  <div data-layer="4" style="left: 12px; top: 8px; position: absolute; color: white; font-size: 16px; font-family: DM Sans; font-weight: 500; line-height: 18px; word-wrap: break-word">4</div>
+              </div>
+              <div data-layer="step4_progreso" class="Step4Progreso">
+                <div data-layer="Ellipse 437" class="Ellipse441"></div>
+                <div data-layer="4" class="NumberFour">
+                  <p>4</p>
+                </div>
+                <div data-layer="4" class="NumberFour numberFourMorado">
+                  <p>4</p>
                 </div>
               </div>
             </div>
-            <div data-layer="line" class="Line" style="width: 596.26px; height: 0px; border: 1px #D9DBE9 solid"></div>
-            <div data-layer="icon_confirm" class="IconConfirm" style="flex-direction: column; justify-content: flex-start; align-items: center; gap: 15px; display: flex">
-              <div data-layer="icon" class="Icon" style="width: 157.36px; height: 143.41px; position: relative">
-                <div data-layer="Rectangle 4343" class="Rectangle4343" style="width: 51.54px; height: 51.54px; left: 14.05px; top: 0px; position: absolute; opacity: 0.50; background: #9E96FF; border-radius: 10px"></div>
-                <div data-layer="Rectangle 4345" class="Rectangle4345" style="width: 29.36px; height: 29.36px; left: 128px; top: 32.87px; position: absolute; opacity: 0.50; background: #9E96FF; border-radius: 10px"></div>
-                <div data-layer="Rectangle 4344" class="Rectangle4344" style="width: 31.53px; height: 31.53px; left: 0px; top: 74.87px; position: absolute; opacity: 0.50; background: #DEDBFF; border-radius: 8px"></div>
-                <div data-layer="Rectangle 4346" class="Rectangle4346" style="width: 36.59px; height: 36.59px; left: 114.29px; top: 106.82px; position: absolute; opacity: 0.50; background: #DEDBFF; border-radius: 8px"></div>
-                <div data-layer="clock" class="Clock" style="position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); display: flex; justify-content: center; align-items: center;">                  
-                  <i class="bi bi-clock-history"style="color: primary; font-size: 5rem;"></i>
-                </div>
+          </div>
+          <div data-layer="line" class="Line"></div>
+          <br />
+          <div data-layer="icon_confirm" class="IconConfirm">
+            <div data-layer="icon" class="Icon">
+              <div data-layer="Rectangle 4343" class="Rectangle4343"></div>
+              <div data-layer="Rectangle 4345" class="Rectangle4345"></div>
+              <div data-layer="Rectangle 4344" class="Rectangle4344"></div>
+              <div data-layer="Rectangle 4346" class="Rectangle4346"></div>
+              <div data-layer="clock" class="Clock">
+                <i class="bi bi-clock-history"></i>
               </div>
             </div>
-            <div data-layer="text_modal" class="TextModal" style="flex-direction: column; justify-content: flex-start; align-items: center; gap: 15px; display: flex">
-              <div data-layer="desc" class="Desc" style="width: 494.67px; text-align: center; color: #6F6C90; font-size: 18px; font-family: DM Sans; font-weight: 400; line-height: 30px; word-wrap: break-word">Tenga en cuenta que el procesamiento de su solicitud puede tomar un tiempo, pero nos comprometemos a responderle lo antes posible. </div>
-              <div data-layer="titulo" class="Titulo" style="text-align: center; color: #170F49; font-size: 24px; font-family: DM Sans; font-weight: 700; line-height: 35px; word-wrap: break-word">¡Gracias por su confianza!</div>
+          </div>
+
+          <div data-layer="text_modal" class="TextModal">
+            <div data-layer="desc" class="Desc">
+              Tenga en cuenta que el procesamiento de su solicitud puede tomar
+              un tiempo, pero nos comprometemos a responderle lo antes posible.
             </div>
-            <a href="step6.html" data-layer="Primary BTN" class="PrimaryBtn" style="padding: 20px 40px; background: #7021EB; box-shadow: 0px 3px 12px rgba(74, 58, 255, 0.18); border-radius: 56px; display: flex; text-decoration: none;">
-              <div data-layer="Button Text" class="ButtonText" style="text-align: center; color: white; font-size: 18px; font-family: DM Sans; font-weight: 700; line-height: 20px; word-wrap: break-word">Enviar</div>
-            </a>          
+            <div data-layer="titulo" class="Titulo">
+              ¡Gracias por su confianza!
+            </div>
+            <br />
           </div>
-          <div data-layer="navigation" class="Navigation" style="align-self: stretch; padding: 10px; justify-content: space-between; align-items: center; display: inline-flex">
-            <a href="step4.html" data-layer="Secondary BTN" class="SecondaryBtn" style="padding: 19px 40px; border-radius: 66px; border: 1px #7021EB solid; display: inline-flex; text-decoration: none;">
-              <div data-layer="Button Text" class="ButtonText" style="text-align: center; color: #7021EB; font-size: 18px; font-family: DM Sans; font-weight: 400; line-height: 20px; word-wrap: break-word">Anterior</div>
-            </a>
-            
-          </div>
+
+          <a href="step6.html" data-layer="Primary BTN" class="PrimaryBtn">
+            <div data-layer="Button Text" class="ButtonText">Enviar</div>
+          </a>
+          <br />
+        </div>
+        <div data-layer="navigation" class="Navigation">
+          <a href="step4.html" data-layer="Secondary BTN" class="SecondaryBtn">
+            <div data-layer="Button Text" class="ButtonTextWhite">Anterior</div>
+          </a>
         </div>
       </div>
-</body>
+    </div>
+  </body>
 </html>
